cmake_minimum_required(VERSION 3.4)
project(enhancement)
include(CMakeToolsHelpers OPTIONAL)
if (APPLE)
    set (OpenCV_DIR "/usr/local/Cellar/opencv3/3.1.0_4/share/OpenCV")
elseif(WIN32)
    set (OpenCV_DIR "E:/opencv/3.1/opencv/build/x64/vc14/lib")
endif()
find_package(OpenCV REQUIRED)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(SOURCE_FILES main.cpp anisotropicdiffusion.h offcell.h niblack.h)
add_executable(enhancement ${SOURCE_FILES})
target_link_libraries(enhancement ${OpenCV_LIBS} )
configure_file(doc1.jpg doc1.jpg COPYONLY)

